# x-to-do-corp

./: .env.example  .gitignore  .taurignore  ARCHITECTURE.md  App.tsx  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  DESKTOP_BUILD.md  INSTALL_BUILD_TOOLS.md  LICENSE  README.md  RELEASE.md  SCRIPTS.md  SECURITY.md  achievements.ts  capacitor.config.json  db.ts  index.css  index.html  index.tsx  metadata.json  package-lock.json  package.json  setup-db.js  setup-supabase.ts  tailwind.config.js  tsconfig.json  types.ts  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
components/: AchievementBadge.tsx  AchievementsPage.tsx  AddTaskFab.tsx  AddTaskModal.tsx  AddTodoForm.tsx  Avatar.tsx  BottomNavbar.tsx  CalendarPage.tsx  ConfirmationModal.tsx  ContributionGraph.tsx  DatePicker.tsx  DayTasksModal.tsx  DeveloperPromo.tsx  EditProfileModal.tsx  FocusModeModal.tsx  Header.tsx  HeaderMenu.tsx  ImageLightbox.tsx  LeftSidebar.tsx  NoteEditor.tsx  NotesPage.tsx  PriorityPicker.tsx  ProductivityStats.tsx  ProfilePage.tsx  RecurrencePicker.tsx  ReminderPicker.tsx  RightSidebar.tsx  SettingsPage.tsx  SettingsRow.tsx  ShortcutsModal.tsx  SpotlightAchievement.tsx  TagBadge.tsx  Toast.tsx  ToastContainer.tsx  TodoItem.tsx  TodoItemSkeleton.tsx  TodoList.tsx  TooltipDemo.tsx  WelcomeGuide.tsx
contexts/: AppContext.tsx
electron/: main.cjs  preload.cjs
hooks/: useAppContext.ts  useClickOutside.ts
public/: desktop-install.html  manifest.webmanifest  service-worker.js
src/: App.tsx  (+3 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
(+81 files in other folders)
