[package]
name = "app"
version = "1.5.0"
description = "X To-Do Corp - Modern task management application with Twitter/X-inspired design"
authors = ["X To-Do Corp"]
license = "MIT"
repository = "https://github.com/H3m0rv1ch1/x-to-do-corp"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.2", features = [] }
tauri-plugin-log = "2"
